--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -38,6 +38,10 @@ button {
   padding: 10px;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 p {
   margin: 0;
 }
@@ -72,6 +76,7 @@ ul {
   padding: 0 1em;
   align-items: center;
   border-bottom: 1px solid var(--blue-glow);
+  color: var(--blue-glow);
   background-color: black;
   z-index: 30000;
 }
@@ -144,6 +149,27 @@ ul {
 }
 
 /* ------------------- */
+/*       Intro         */
+/* ------------------- */
+
+.whitelist-intro {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 2000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+}
+
+.blocked {
+  color: var(--blue-glow);
+}
+
+/* ------------------- */
 /*        Game         */
 /* ------------------- */
 
@@ -164,7 +190,8 @@ ul {
 
 .alert-upload-modal {
   position: absolute;
-  z-index: 10000;
+  background-color: var(--bg-black);
+  z-index: 100000;
   right: 1em;
   bottom: 1em;
   display: flex;
