--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1070,8 +1070,9 @@ img.audio-player-play-button-large {
 
 .track-info {
   width: 53%;
+  position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   color: var(--green);
 }
 
@@ -1081,7 +1082,9 @@ img.audio-player-play-button-large {
 }
 
 .track-info img {
+  position: absolute;
   height: 1.5em;
+  right: 0;
 }
 
 .playlist-outer-wrapper {
@@ -1158,9 +1161,10 @@ img.audio-player-play-button-large {
   left: 0.2em;
   z-index: 100;
   width: 96%;
+  appearance: none;
   -webkit-appearance: none;
   background-color: transparent;
-  background-size: 0% 100%;
+  /* background-size: 0% 100%; */
 }
 
 .timeline-3d::-webkit-slider-thumb {
