--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1069,10 +1069,10 @@ img.audio-player-play-button-large {
 }
 
 .track-info {
-  width: 53%;
+  width: 46%;
   position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   color: var(--green);
 }
 
@@ -1082,9 +1082,7 @@ img.audio-player-play-button-large {
 }
 
 .track-info img {
-  position: absolute;
   height: 1.5em;
-  right: 0;
 }
 
 .playlist-outer-wrapper {
@@ -1122,14 +1120,24 @@ img.audio-player-play-button-large {
 
 .playlist-item div,
 .playlist-item-selected div {
-  display: flex;
+  /* display: flex;
   align-items: center;
   column-gap: 0.5em;
+ */
+  display: grid;
+  grid-template-columns: repeat(3, 4em);
+  gap: 0.5em;
+}
+
+.playlist-item p,
+.playlist-item-selected p {
+  justify-self: end;
 }
 
 .playlist-item img,
 .playlist-item-selected img {
   height: 1.25em;
+  justify-self: end;
 }
 
 .player-3d-middle-row {
